# dab-s3-logs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rustwrap.yaml
.github/workflows/: osv-scanner.yml  release.yml  rust.yml
apps/dab-s3-logs/: Cargo.toml  README.md
apps/dab-s3-logs/src/: lib.rs  main.rs
apps/dab-s3-logs/src/app/: download.rs  mod.rs
apps/dab-s3-logs/src/aws/: mod.rs
apps/dab-s3-logs/src/aws/client/: errors.rs  mod.rs
apps/dab-s3-logs/src/aws/profiles/: errors.rs  mod.rs
apps/dab-s3-logs/src/aws/s3/: buckets.rs
apps/dab-s3-logs/src/commands/: reset.rs
apps/dab-s3-logs/src/commands/config/: list_vars.rs  mod.rs  select_aws_profile.rs  set_download_dir.rs  set_max_storage.rs
apps/dab-s3-logs/src/commands/fetch/: errors.rs  mod.rs
apps/dab-s3-logs/src/config/: mod.rs
apps/dab-s3-logs/src/output/: stdout.rs
apps/dab-s3-logs/src/storage/: mod.rs
crates/aws/: Cargo.toml
crates/aws/src/: lib.rs  main.rs
crates/aws/src/client/: mod.rs
crates/aws/src/config/: mod.rs
crates/aws/src/profiles/: errors.rs  get_aws_profiles.rs  mod.rs
crates/aws/src/s3/: buckets.rs  cli_wrapper.rs  errors.rs  mod.rs
src/: lib.rs  main.rs
src/app/: download.rs  errors.rs  mod.rs  query-builder.rs
src/commands/: config.rs  fetch.rs  mod.rs  output.rs  reset.rs
src/commands/fetch/: mod.rs
src/config/: mod.rs
src/output/: mod.rs  stdout.rs
src/s3/: buckets  errors.rs  mod.rs
src/storage/: config.rs  mod.rs
