[package]
name = "dab-s3-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.21.0", features = ["behavior-version-latest"] }
chrono = "0.4.37"
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
anyhow = "1.0.81"
human_bytes = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
confy = "0.6.1"
file-format = "0.24.0"
flate2 = "1.0.28"
serde_json = "1.0.115"
fs_extra = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
is-terminal = "0.4.12"
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
walkdir = "2.5.0"
dirs = "5.0.1"
bytesize = { version = "1.3.0", features = ["serde"] }
regex = "1.10.4"
toml = "0.8.12"
