[package]
name = "aws"
version = "0.1.0"
edition = "2021"
authors = ["Nick Moignard"]
description = "A library for interacting with AWS services"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.21.0", features = ["behavior-version-latest"] }
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
# Replace human_bytes with bytesize
bytesize = { version = "1.3.0", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"

# TODO: Remove the following dependencies
regex = "1.10.4"
anyhow = "1.0.81"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
human_bytes = "0.4.3"
rust-ini = "0.21.0"
dirs = "5.0.1"
dateparser = "0.2.1"

[dev-dependencies]
mockall = "0.12.1"
